# engini_assignment

./: .gitignore  README.md  backend.Dockerfile  docker-compose.yml  example.env  frontend.Dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/agents/: assistant_agent.py  digram_generating_agent.py  prompts.py
app/api/v1/: router.py
app/schemas/: diagram.py
app/tools/: generate_graph.py
streamlit/: chat_ui.py  client.py
tests/: conftest.py  test_api_endpoints.py  test_diagram_agent.py  test_diagram_tools.py  test_main_app.py  test_streamlit_client.py
