[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diagram-generator"
version = "0.1.0"
description = "AWS Architecture Diagram Generator with LLM-powered agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Eden Djanashvili"}
]
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.0.335",
    "langchain-openai>=0.0.1",
    "streamlit>=1.29.0",
    "diagrams>=0.23.3",
    "openai>=1.3.5",
    "pydantic>=2.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"